--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
     "jest": "^29.4.3",
     "react": "^18.2.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
+    "axios": "^1.3.4",
+    "jest-environment-jsdom": "^29.4.3"
   }
 }
